# AntibodyBigQuery

./: README.md  pyproject.toml
data/: heavy_antibody_table.csv  heavy_seq_table.csv  metadata.json
download_scripts/: README.md  human_unpaired_heavy_bulk_download.sh  human_unpaired_light_bulk_download.sh  mouse_BALB-c_paired.sh  mouse_C57BL-6_paired.sh
download_scripts/nonhuman_unpaired_HL/: HIS_mouse_unpaired.sh  Kymouse_unpaired.sh  camel_unpaired.sh  download_all.sh  mouse_BALB_unpaired.sh  mouse_C5_unpaired.sh  mouse_RAG2_unpaired.sh  mouse_Swiss_unpaired.sh  mouse_unpaired.sh  rabbit_unpaired.sh  rat_unpaired.sh  rhesus_unpaired.sh
load/: README.md  big_query_table_creator.py  big_query_uploader.py  constants.py
notebooks/: analysis.ipynb  batch.ipynb  split.ipynb  test_etl.ipynb
scripts/: README.md  const_directories.py  test.txt  test_batching.py  test_data_manager.py  test_naive_implementation.py  test_rdms.py  test_sanity_check.py  utils.py
src/: README.md
src/etl/: README.md  constants.py  process.py
src/load/: README.md  big_query_table_creator.py  big_query_uploader.py  constants.py
src/transform/: README.md
transform/: README.md  __init__.py  batch.py  data_manager.py  oas_data_processor.py
utils/: time_decorator.py  timing_decorator.py
